# JubiterSDK_Android

./: .gitignore  .gitmodules  ActionBuild.sh  README.md  build.gradle  config.gradle  gradle.properties  keystore.jks  keystore.properties  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/androidTest/java/com/jubiter/sdk/example/: BTCTest.java  BaseTest.java  ETHTest.java  TRXTest.java  XRPTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jubiter/plugin/protos/: JuBiterBlueProtos.java  JuBiterNfcProtos.java
app/src/main/java/com/jubiter/sdk/example/: BTCActivity.java  CKBActivity.java  DeviceActivity.java  DeviceListDialog.java  EOSActivity.java  ETHActivity.java  FILActivity.java  FingerPrintManagerActivity.java  HexUtils.java  JubiterImpl.java  MainActivity.java  TRXActivity.java  ThreadUtils.java  VerifyPinDialog.java  XRPActivity.java
app/src/main/java/com/jubiter/sdk/example/dialog/: BtDeviceAdapter.java  InputDialog.java  PathDialog.java  SelectDeviceDialog.java  SelectDialog.java  TipDialog.java
app/src/main/java/com/jubiter/sdk/example/net/: RetrofitManager.java
app/src/main/java/com/jubiter/sdk/example/net/bean/: SimpleBean.java
app/src/main/java/com/jubiter/sdk/example/net/bean/broadcast/: Broadcast.java
app/src/main/java/com/jubiter/sdk/example/net/bean/btchisory/: BtcHistory.java  BtcHistoryData.java  TxList.java  Vin.java  Vout.java
app/src/main/java/com/jubiter/sdk/example/net/bean/btctransaction/: Input.java  Output.java  PreTransaction.java  PreTransactionBean.java  Prevout.java
app/src/main/java/com/jubiter/sdk/example/net/bean/ethhistory/: EthHistory.java  EthHistoryData.java  TokenInfo.java  TxList.java
app/src/main/java/com/jubiter/sdk/example/net/bean/ethinfo/: EthAccountInfo.java  EthAccountInfoData.java  Token.java
app/src/main/java/com/jubiter/sdk/example/net/bean/fee/: Fees.java  FeesData.java
app/src/main/java/com/jubiter/sdk/example/net/bean/txid/: Input.java  TxStatus.java  TxStatusData.java
app/src/main/java/com/jubiter/sdk/example/net/btc/: BtcApiService.java  BtcModel.java
app/src/main/java/com/jubiter/sdk/example/net/eth/: EthApiService.java  EthModel.java
app/src/main/java/com/jubiter/sdk/example/utils/: DecimalDigitsInputFilter.java  HexUtils.java  JubCallback.java  SelectAdapter.java  ThreadUtils.java  Utils.java
app/src/main/res/drawable/: corners_grey_bg.xml  rb_nobtn_selector.xml  spinner.xml
app/src/main/res/layout/: activity_btc.xml  activity_ckb.xml  activity_device.xml  activity_eos.xml  activity_eth.xml  activity_fil.xml  activity_finger_print_manager.xml  activity_main.xml  activity_trx.xml  activity_xrp.xml  dialog_path.xml  dialog_verify_pin.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
release_logs/refs/tags/: 2.3.10.md  2.3.11.md  2.3.12.md  2.3.13.md  2.3.6.md  2.3.7.md  2.3.8.md  2.3.9.md  2.4.0.md  2.4.1.md  2.4.2.md  2.4.3.md  2.4.4.md  2.4.5.md  v2.4.10.md  v2.4.6.md  v2.4.7.md  v2.4.8.md  v2.4.9.md
sdk/: CMakeLists.txt  build.gradle  proguard-rules.pro
sdk/src/androidTest/java/com/jubiter/sdk/: ExampleInstrumentedTest.java
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: CMakeLists.txt
sdk/src/main/cpp/jni/: implJni.cpp  implJni.cpp.bat  implJni.h
sdk/src/main/cpp/jni/include/: jni_bio.h  jni_ble.h  jni_comm.h  jni_nfc.h  jni_swi.h
sdk/src/main/cpp/jni/include/token/: jni_btc.h  jni_ckb.h  jni_eos.h  jni_eth.h  jni_fil.h  jni_trx.h  jni_xrp.h
sdk/src/main/cpp/jni/src/: jni_bio.cpp  jni_ble.cpp  jni_comm.cpp  jni_nfc.cpp  jni_swi.cpp
sdk/src/main/cpp/jni/src/token/: jni_btc.cpp  jni_ckb.cpp  jni_eos.cpp  jni_eth.cpp  jni_fil.cpp  jni_trx.cpp  jni_xrp.cpp
sdk/src/main/cpp/jni/utils/: logUtils.h  utils.cpp  utils.h
sdk/src/main/java/com/jubiter/sdk/: Config.java  ConnectionStateCallback.java  JuBiterBIOWallet.java  JuBiterBLEDevice.java  JuBiterBitcoin.java  JuBiterCKB.java  JuBiterEOS.java  JuBiterEthereum.java  JuBiterFilecoin.java  JuBiterNFCWallet.java  JuBiterSWIWallet.java  JuBiterTRX.java  JuBiterWallet.java  JuBiterXRP.java  ScanResultCallback.java
sdk/src/main/java/com/jubiter/sdk/jni/: BioNativeApi.java  BleNativeApi.java  InnerDiscCallback.java  InnerScanCallback.java  JubBitcoin.java  JubCommon.java  JubEthereum.java  NFCInitParam.java  NativeApi.java  NfcNativeApi.java  SwiNativeApi.java
sdk/src/main/java/com/jubiter/sdk/jni/ble/: InnerDiscCallback.java  InnerScanCallback.java  NfcDiscCallback.java  NfcScanCallback.java
sdk/src/main/java/com/jubiter/sdk/jni/nfc/: NFCInitParam.java  NfcDiscCallback.java  NfcScanCallback.java
sdk/src/main/java/com/jubiter/sdk/jni/utils/: JUB_DEVICE_INFO.java
sdk/src/main/java/com/jubiter/sdk/proto/: BitcoinProtos.java  CommonProtos.java  EOSProtos.java  EthereumProtos.java  FilecoinProtos.java  HcashProtos.java  NervosCKBProtos.java  RippleProtos.java
